--- a/ecommerce/ecommerce/package.json
+++ b/ecommerce/ecommerce/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.1.0",
     "@angular/router": "~12.1.0",
     "@types/jquery": "^3.5.6",
+    "angular-responsive-carousel": "^2.1.2",
     "jquery": "^3.6.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~6.6.0",
